--- a/case2.html
+++ b/case2.html
@@ -325,7 +325,7 @@
                   <span> 公司行號</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>不不銹鋼毛絲面門牌、不銹鋼雷切字、不銹鋼板鏤空雷切</span>
+                  <span>不銹鋼毛絲面門牌、不銹鋼雷切字、不銹鋼板鏤空雷切</span>
                 </li>
               </ul>
               <hr>
