--- a/case3.html
+++ b/case3.html
@@ -296,43 +296,43 @@
 
           <div class="row mt_10">
             <div class="col-md-6" style="margin-top:30px">
-              <div><a class="thumbnails" href="./c7.html"> <img class="" style="" data-name="product_image" src="images/work/c7m.jpg" alt="" /></a></div>
+              <div><a class="thumbnails" href="./c11.html"> <img class="" style="" data-name="product_image" src="images/work/c11m.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
-              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c7.html" title="">天蜜日式養生甜品</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c11.html" title="">北回木瓜牛奶</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 日式甜品專賣店</span></li>
+                  <span> 飲料店</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>暖簾、球面亞特圓形招牌、壓克力銅釦海報架</span>
+                  <span>方形亞特燈箱、烤漆壓克力立體字、噴砂卡典西德</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">天蜜位於大里區鐵路街<br>為甜品專賣店</p>
-              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c7.html" title="">「...More+」</a></h4>
+              <p class="product-desc mtb_30">北回木瓜牛奶位於西屯區文華路<br>是水果飲料專賣店</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c11.html" title="">「...More+」</a></h4>
             </div>
           </div>
 
           <div class="row mt_10 ">
             <div class="col-md-6" style="margin-top:30px">
-              <div><a class="thumbnails" href="./c8.html"> <img style="" data-name="product_image" src="images/work/c8m.jpg" alt="" /></a></div>
+              <div><a class="thumbnails" href="./c12.html"> <img style="" data-name="product_image" src="images/work/c12mm.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
-              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c8.html" title="">天賦股份有限公司</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c12.html" title="">光食料理</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 公司行號</span></li>
+                  <span> 輕食餐廳</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>不不銹鋼毛絲面門牌、不銹鋼雷切字、不銹鋼板鏤空雷切</span>
+                  <span>不銹鋼背光立體字</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">天賦位於西屯區福雅路<br>為自動化倉儲設備公司</p>
-              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c8.html" title="">「...More+」</a></h4>
+              <p class="product-desc mtb_30">光食料理位於西屯區河南路四段111號<br>為輕食料理餐廳</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c12.html" title="">「...More+」</a></h4>
             </div>
           </div>
         </div>
