--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 <script>
   window.fbAsyncInit = function() {
     FB.init({
+      appId            : '673402183412832',
+      autoLogAppEvents : true,
+      xfbml            : true,
+      version          : 'v6.0'
+    });
+  };
+</script>
+<script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
+
+<!-- <script>
+  window.fbAsyncInit = function() {
+    FB.init({
       appId            : '1558047937824524',
       autoLogAppEvents : true,
       xfbml            : true,
@@ -42,7 +54,7 @@
      js.src = "https://connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
-</script>
+</script> -->
 
 <div class="fb-customerchat"
   page_id="<278470828890326>"
