--- a/index.html
+++ b/index.html
@@ -25,42 +25,32 @@
 </head>
 <body>
 
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId            : '673402183412832',
-      autoLogAppEvents : true,
-      xfbml            : true,
-      version          : 'v6.0'
-    });
-  };
-</script>
-<script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
+<!-- Load Facebook SDK for JavaScript -->
+      <div id="fb-root"></div>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v6.0'
+          });
+        };
 
-<!-- <script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId            : '1558047937824524',
-      autoLogAppEvents : true,
-      xfbml            : true,
-      version          : 'v2.11'
-    });
-  };
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/zh_TW/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
 
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "https://connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script> -->
-
-<div class="fb-customerchat"
-  page_id="<278470828890326>"
-  ref="<OPTIONAL_WEBHOOK_PARAM>"
-  minimized="<true|false>">
-</div>
+      <!-- Your customer chat code -->
+      <div class="fb-customerchat"
+        attribution=setup_tool
+        page_id="278470828890326"
+  theme_color="#ee7800"
+  logged_in_greeting="您好！有什麼需要我們協助的地方嗎？"
+  logged_out_greeting="您好！有什麼需要我們協助的地方嗎？">
+      </div>
 
 <!-- <div class="top_bg">
   <div class="mainall">
