--- a/product.html
+++ b/product.html
@@ -136,32 +136,32 @@
     <div class="pro_show_n">
       <ul>
         <li>
-          <div class="pic"> <a href="P1.html" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" alt="LED廣告招牌"/> </a> </div>
+          <div class="pic"> <a href="P1.html" title="LED廣告招牌" target="_blank"> <img src="images/s111.jpg" alt="LED廣告招牌"/> </a> </div>
           <div class="info"> <a href="P1.html" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P2.html" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" alt="門牌設計製作"/> </a> </div>
+          <div class="pic"> <a href="P2.html" title="門牌設計製作" target="_blank"> <img src="images/s222.jpg" alt="門牌設計製作"/> </a> </div>
           <div class="info"> <a href="P2.html" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P3.html" title="品牌/通路燈箱" target="_blank"> <img src="images/s3.jpg" alt="品牌/通路燈箱"/> </a> </div>
+          <div class="pic"> <a href="P3.html" title="品牌/通路燈箱" target="_blank"> <img src="images/s333.jpg" alt="品牌/通路燈箱"/> </a> </div>
           <div class="info"> <a href="P3.html" title="品牌/通路燈箱" target="_blank">品牌/通路燈箱</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P4.html" title="立體字" target="_blank"> <img src="images/s4.jpg" alt="立體字"/> </a> </div>
+          <div class="pic"> <a href="P4.html" title="立體字" target="_blank"> <img src="images/s444.jpg" alt="立體字"/> </a> </div>
           <div class="info"> <a href="P4.html" title="立體字" target="_blank">立體字</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P5.html" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" alt="指示牌/標示牌"/> </a> </div>
+          <div class="pic"> <a href="P5.html" title="指示牌/標示牌" target="_blank"> <img src="images/s555.jpg" alt="指示牌/標示牌"/> </a> </div>
           <div class="info"> <a href="P5.html" title="指示牌/標示牌"  target="_blank">指示牌/標示牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P6.html" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
+          <div class="pic"> <a href="P6.html" title="雷射CNC切割" target="_blank"> <img src="images/s666.jpg" alt="雷射CNC切割"/> </a> </div>
           <div class="info"> <a href="P6.html" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
         </li>
       </ul>
@@ -356,20 +356,20 @@
   </div>
   <div class="case_n">
     <ul>
-      <li class="case1" style="height: 448px"><a href="#" title="工程案例" class="pros_img"><img src="images/pro1.jpg" alt="工程案例" /></a>
-        <p style="background: #F39800"><a href="#" title="工程案例">工程案例一</a> </p>
+      <li class="case1" style="height: 448px"><a href="./c11.html" title="" class="pros_img"><img src="images/t1.jpg" alt="" /></a>
+        <p style="background: #F39800"><a href="./c11.html" title="">北回木瓜牛奶</a> </p>
       </li>
-      <li class="case2" style="margin-left: -10px"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro2.jpg" alt="工程案例" /></a>
-        <p style="background: #F39800;"><a href="#" title="工程案例">工程案例二</a> </p>
+      <li class="case2" style="margin-left: -10px"> <a href="./c15.html" title="" class="pros_img"><img src="images/t2.jpg" alt="" /></a>
+        <p style="background: #F39800;"><a href="./c15.html" title="">安全運轉</a> </p>
       </li>
-      <li class="case3" style="margin-left: -10px"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro3.jpg" alt="工程案例" /></a>
-        <p style="background: #F39800"><a href="#" title="工程案例">工程案例三</a> </p>
+      <li class="case3" style="margin-left: -10px"> <a href="./c1.html" title="" class="pros_img"><img src="images/t3.jpg" alt="" /></a>
+        <p style="background: #F39800"><a href="./c1.html" title="">一起肉肉吧</a> </p>
       </li>
-      <li class="case4" style="margin-left: -10px; margin-top: 15px"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro4.jpg" alt="工程案例" /></a>
-        <p style="background: #F39800"><a href="#" title="工程案例">工程案例四</a> </p>
+      <li class="case4" style="margin-left: -10px; margin-top: 15px"> <a href="./c6.html" title="" class="pros_img"><img src="images/t4.jpg" alt="" /></a>
+        <p style="background: #F39800"><a href="./c6.html" title="">天承軒</a> </p>
       </li>
-      <li class="case5" style="margin-left: -10px; margin-top: 15px"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro5.jpg" alt="工程案例" /></a>
-        <p style="background: #F39800"><a href="#" title="工程案例">工程案例五</a> </p>
+      <li class="case5" style="margin-left: -10px; margin-top: 15px"> <a href="./c12.html" title="" class="pros_img"><img src="images/t5.jpg" alt="" /></a>
+        <p style="background: #F39800"><a href="./c12.html" title="">光食</a> </p>
       </li>
     </ul>
   </div>
