--- a/product.html
+++ b/product.html
@@ -136,33 +136,33 @@
     <div class="pro_show_n">
       <ul>
         <li>
-          <div class="pic"> <a href="P1.html" title="LED廣告招牌" target="_blank"> <img src="images/s111.jpg" alt="LED廣告招牌"/> </a> </div>
-          <div class="info"> <a href="P1.html" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
+          <div class="pic"> <a href="p1.html" title="LED廣告招牌" target="_blank"> <img src="images/s111.jpg" alt="LED廣告招牌"/> </a> </div>
+          <div class="info"> <a href="p1.html" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P2.html" title="門牌設計製作" target="_blank"> <img src="images/s222.jpg" alt="門牌設計製作"/> </a> </div>
-          <div class="info"> <a href="P2.html" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
+          <div class="pic"> <a href="p2.html" title="門牌設計製作" target="_blank"> <img src="images/s222.jpg" alt="門牌設計製作"/> </a> </div>
+          <div class="info"> <a href="p2.html" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P3.html" title="品牌/通路燈箱" target="_blank"> <img src="images/s333.jpg" alt="品牌/通路燈箱"/> </a> </div>
-          <div class="info"> <a href="P3.html" title="品牌/通路燈箱" target="_blank">品牌/通路燈箱</a> </div>
+          <div class="pic"> <a href="p3.html" title="品牌/通路燈箱" target="_blank"> <img src="images/s333.jpg" alt="品牌/通路燈箱"/> </a> </div>
+          <div class="info"> <a href="p3.html" title="品牌/通路燈箱" target="_blank">品牌/通路燈箱</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P4.html" title="立體字" target="_blank"> <img src="images/s444.jpg" alt="立體字"/> </a> </div>
-          <div class="info"> <a href="P4.html" title="立體字" target="_blank">立體字</a> </div>
+          <div class="pic"> <a href="p4.html" title="立體字" target="_blank"> <img src="images/s444.jpg" alt="立體字"/> </a> </div>
+          <div class="info"> <a href="p4.html" title="立體字" target="_blank">立體字</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P5.html" title="指示牌/標示牌" target="_blank"> <img src="images/s555.jpg" alt="指示牌/標示牌"/> </a> </div>
-          <div class="info"> <a href="P5.html" title="指示牌/標示牌"  target="_blank">指示牌/標示牌</a> </div>
+          <div class="pic"> <a href="p5.html" title="指示牌/標示牌" target="_blank"> <img src="images/s555.jpg" alt="指示牌/標示牌"/> </a> </div>
+          <div class="info"> <a href="p5.html" title="指示牌/標示牌"  target="_blank">指示牌/標示牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="P6.html" title="雷射CNC切割" target="_blank"> <img src="images/s666.jpg" alt="雷射CNC切割"/> </a> </div>
-          <div class="info"> <a href="P6.html" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
+          <div class="pic"> <a href="p6.html" title="雷射CNC切割" target="_blank"> <img src="images/s666.jpg" alt="雷射CNC切割"/> </a> </div>
+          <div class="info"> <a href="p6.html" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
         </li>
       </ul>
     </div>
