--- a/c18.html
+++ b/c18.html
@@ -343,7 +343,7 @@
                   <span> 公司行號</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>、</span>
+                  <span>不銹鋼鏤空切割背植釘、壓克力泡棉字</span>
                 </li>
               </ul>
               <hr>
