--- a/product.html
+++ b/product.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" style="width: fit-content;">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="favicon.ico" rel="icon" type="image/x-icon" />
