--- a/index_m.html
+++ b/index_m.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html PUBLIC "">
-<html xmlns="">
+<html xmlns="" style="width: fit-content;">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="favicon.ico" rel="icon" type="image/x-icon" />
@@ -20,8 +20,8 @@
 <script type="text/javascript" src="style/js/jquery.superslide.2.1.1.js"></script>
 <script type="text/javascript" src="style/js/js.js"></script>
 
-<meta http-equiv="mobile-agent" content="format=xhtml;url=/m/index.html">
-<!-- <script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="m/index.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script> -->
+<meta http-equiv="mobile-agent" content="format=xhtml;url=./m/index_m.html">
+<!-- <script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href=".m/index_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script> -->
 </head>
 <body>
 
@@ -160,7 +160,7 @@
     <ul>
      <li style="background:url(images/c01.jpg) no-repeat center center"></li>
      <li style="background:url(images/c02.jpg) no-repeat center center"></li>
-     <li style="background:url(images/c04.jpg) no-repeat center center"></li>
+     <li style="background:url(images/c03.jpg) no-repeat center center"></li>
     </ul>
   </div>
   <span class="prev"></span> <span class="next"></span>
@@ -200,12 +200,12 @@
     <div class="clearboth"></div>
     <div class="pro_c">
       <ul>
-        <li> <a href="./index.html" title="LED廣告招牌" target="_blank" style="color: #FFF"> LED廣告招牌</a> </li><!-- chanpin/xtygf -->
-        <li> <a href="./index.html" title="門牌設計製作" target="_blank" style="color: #FFF"> 門牌設計製作</a> </li><!-- chanpin/chuangpeng -->
-        <li> <a href="./index.html" title="品牌/通路燈箱" target="_blank" style="color: #FFF"> 品牌/通路燈箱</a> </li><!-- chanpin/chepeng -->
-        <li> <a href="./index.html" title="立體字" target="_blank" style="color: #FFF"> 立體字</a> </li><!-- chanpin/lutaipeng -->
-        <li> <a href="./index.html" title="指示牌/標示牌" target="_blank" style="color: #FFF"> 空間指示牌/標示牌</a> </li><!-- chanpin/lvyilangan -->
-        <li> <a href="./index.html" title="雷射CNC切割" target="_blank" style="color: #FFF"> 雷射CNC切割</a> </li><!-- chanpin/lvyidamen -->
+        <li> <a href="./p1.html" title="LED廣告招牌" target="_blank" style="color: #FFF"> LED廣告招牌</a> </li><!-- chanpin/xtygf -->
+        <li> <a href="./p2.html" title="門牌設計製作" target="_blank" style="color: #FFF"> 門牌設計製作</a> </li><!-- chanpin/chuangpeng -->
+        <li> <a href="./p3.html" title="品牌/通路燈箱" target="_blank" style="color: #FFF"> 品牌/通路燈箱</a> </li><!-- chanpin/chepeng -->
+        <li> <a href="./p4.html" title="立體字" target="_blank" style="color: #FFF"> 立體字</a> </li><!-- chanpin/lutaipeng -->
+        <li> <a href="./p5.html" title="指示牌/標示牌" target="_blank" style="color: #FFF"> 空間指示牌/標示牌</a> </li><!-- chanpin/lvyilangan -->
+        <li> <a href="./p6.html" title="雷射CNC切割" target="_blank" style="color: #FFF"> 雷射CNC切割</a> </li><!-- chanpin/lvyidamen -->
       </ul>
       <!-- <ul>
         <li> <a href="./index.html" title="指示牌" target="_blank"> 指示牌</a> </li>
@@ -220,33 +220,33 @@
     <div class="pro_show_n">
       <ul>
         <li>
-          <div class="pic"> <a href="#" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" alt="LED廣告招牌"/> </a> </div>
-          <div class="info"> <a href="#" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
+          <div class="pic"> <a href="./p1.html" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" alt="LED廣告招牌"/> </a> </div>
+          <div class="info"> <a href="./p1.html" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="#" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" alt="門牌設計製作"/> </a> </div>
-          <div class="info"> <a href="#" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
+          <div class="pic"> <a href="./p2.html" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" alt="門牌設計製作"/> </a> </div>
+          <div class="info"> <a href="./p2.html" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="#" title="品牌/通路燈箱" target="_blank"> <img src="images/s3.jpg" alt="品牌/通路燈箱"/> </a> </div>
-          <div class="info"> <a href="#" title="品牌/通路燈箱" target="_blank" style="">品牌/通路燈箱</a> </div>
+          <div class="pic"> <a href="./p3.html" title="品牌/通路燈箱" target="_blank"> <img src="images/s3.jpg" alt="品牌/通路燈箱"/> </a> </div>
+          <div class="info"> <a href="./p3.html" title="品牌/通路燈箱" target="_blank" style="">品牌/通路燈箱</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="#" title="立體字" target="_blank"> <img src="images/s4.jpg" alt="立體字"/> </a> </div>
-          <div class="info"> <a href="#" title="立體字" target="_blank">立體字</a> </div>
+          <div class="pic"> <a href="./p4.html" title="立體字" target="_blank"> <img src="images/s4.jpg" alt="立體字"/> </a> </div>
+          <div class="info"> <a href="./p4.html" title="立體字" target="_blank">立體字</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="#" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" alt="指示牌/標示牌"/> </a> </div>
-          <div class="info"> <a href="#" title="指示牌/標示牌"  target="_blank">空間指示牌/標示牌</a> </div>
+          <div class="pic"> <a href="./p5.html" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" alt="指示牌/標示牌"/> </a> </div>
+          <div class="info"> <a href="./p5.html" title="指示牌/標示牌"  target="_blank">空間指示牌/標示牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="#" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
-          <div class="info"> <a href="#" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
+          <div class="pic"> <a href="./p6.html" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
+          <div class="info"> <a href="./p6.html" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
           <em></em>
         </li>
         <!-- <li>
@@ -680,7 +680,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
 
 <link href="style/css/extra.css" rel="stylesheet" type="text/css" />
 
-<div class="wjdh-float">
+<div class="wjdh-float" style="margin-bottom: 250px">
   <ul>
     <li><a href="javascript:docscroll('body');" title="回到頁首"> <img alt="回到頁首" title="回到頁首" src="style/images/top.jpg" /></a></li>
     <li class="bdsharebuttonbox"><a title="臉書專頁" data-cmd="more"><img alt="臉書專頁" title="臉書專頁" src="style/images/fb.jpg" /></a></li>
