--- a/news_m.html
+++ b/news_m.html
@@ -1,11 +1,11 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
-<html xmlns="http://www.w3.org/1999/xhtml" style="width: auto;">
+<html xmlns="http://www.w3.org/1999/xhtml" style="width: 1393px;">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="favicon.ico" rel="icon" type="image/x-icon" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>報價諮詢</title>
+<title>最新消息</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="style/css/css.css" rel="stylesheet" type="text/css" />
@@ -25,7 +25,7 @@
 <script type="text/javascript" src="style/js/js.js"></script>
 <!-- <link rel="alternate" media="only screen and(max-width: 640px)"href="../m/liste9f9.html?tid=17" > -->
 <meta http-equiv="mobile-agent" content="format=xhtml;url=/m/list.php?tid=17">
-<script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="./order_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script>
+<!-- <script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="m/news_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script> -->
 </head>
 <body>
 <div class="top_bgk"> 
@@ -48,13 +48,13 @@
       <li style="margin-left: 50px"><a href="index.html" title="快得力首頁">首頁/Home</a></li>
         <li><a href='./case.html'>工程實績/Case</a></li><!-- hzkh -->
         <li><a href='./product.html'>產品項目/Product</a></li>
-        <li class='another'><a href='./order.html'>報價諮詢/Order</a></li> <!-- (gongsi) -->
+        <li><a href='./order.html'>報價諮詢/Order</a></li> <!-- (gongsi) -->
         <li><a href='./about.html'>關於我們/About</a></li>
-        <li><a href='./news.html'>最新消息/News</a></li> <!-- (xinwen) -->
+        <li class='another'><a href='./news.html'>最新消息/News</a></li> <!-- (xinwen) -->
     </ul>
   </div>
 </div>
-<div class="wjdh-banner" style="background-image: url(./images/order1.jpg);"></div>
+<div class="wjdh-banner" style="background-image: url(./images/news1.jpg);"></div>
 <!-- <div class="cat-menu">
   <div class="container">
     <div class="menu-list">
@@ -65,70 +65,159 @@
   </div>
 </div> -->
 
-<div class="pro_dbg" style="height:auto">
-  <div class="mainall1">
-    <div class="clearboth"></div>
-    <div class="case_t tc mt40">
-      <h3 style=""><a href="#" style="color: #ee7800; display:inline-block; margin-top:15px">諮詢表單</a></h3>
+<div class="list01">
+  <div class="container">
+    <div class="list01-content">
+      <div class="wjdh-title" style="border-bottom:#FFF">
+        <!-- <div class="title-box">
+          <h3>客户见证<small>/ Customer testimony</small></h3>
+        </div> -->
+      </div>
+      <div class="content">
+        <div class="list01-top">
+          <ul>
+            <li>
+              <div class="img pull-left">
+                <a href="n6.html" title="">
+                  <img alt="" src="../style/images/grey.gif" data-thumb="0" data-src="images/w6.jpg" />
+                  <div class="item-mask">
+                    <div class="item-link-icon"> <i class="wjdh-link"></i> </div>
+                  </div>
+                </a>
+              </div>
+              <div class="info pull-right">
+                <!-- <em>2017/02/13</em> -->
+                <a href="n6.html" title="" class="title-a" style="color:#ee7800">臺中市廣告物設置標準圖說</a>
+                <p>臺中市招牌廣告及樹立廣告設置辦法</p>
+                <a href="n6.html" title="" class="more" title="">
+                  <span style="">了解詳情</span>
+                  <i></i>
+                </a>
+              </div>
+              <div class="clearfix"> </div>
+              <!-- <span class="tag-hot">hot</span> -->
+            </li>
+          </ul>
+        </div>
+
+        <div class="list">
+          <ul>
+          <li>
+              <dl>
+                <dt>
+                  <div class="date"> <span style="color:#ee7800">02-13</span> <em>2017</em> </div>
+                </dt>
+                <dd> <a href="n6.html" title=""><b style="color:#ee7800">臺中市廣告物設置標準圖說</b></a>
+                  <p>臺中市招牌廣告及樹立廣告設置辦法</p>
+                </dd>
+              </dl>
+              <a href="n6.html" title="" class="more"></a> </li><li>
+              <dl>
+                <dt>
+                  <div class="date"> <span style="color:#ee7800">11-20</span> <em>2016</em> </div>
+                </dt>
+                <dd> <a href="n5.html" title=""><b style="color:#ee7800">本公司獲選政府優良企業</b></a>
+                  <p>榮獲臺中市政府表揚</p>
+                </dd>
+              </dl>
+              <a href="n5.html" title="" class="more"></a> </li><li>
+              <dl>
+                <dt>
+                  <div class="date"> <span style="color:#ee7800">11-01</span> <em>2016</em> </div>
+                </dt>
+                <dd> <a href="n4.html" title=""><b style="color:#ee7800">參與國立彰化師範大學廣告技術士研習</b></a>
+                  <p>本公司派員參加第一屆廣告工程研習</p>
+                </dd>
+              </dl>
+              <a href="n4.html" title="" class="more"></a> </li><li>
+              <dl>
+                <dt>
+                  <div class="date"> <span style="color:#ee7800">09-12</span> <em>2016</em> </div>
+                </dt>
+                <dd> <a href="n3.html" title=""><b style="color:#ee7800">亞特燈箱於五金通路正式上架</b></a>
+                  <p>於2016年度開始本公司加入五金商場通路</p>
+                </dd>
+              </dl>
+              <a href="n3.html" title="" class="more"></a> </li><li>
+              <dl>
+                <dt>
+                  <div class="date"> <span style="color:#ee7800">04-18</span> <em>2014</em> </div>
+                </dt>
+                <dd> <a href="n2.html" title=""><b style="color:#ee7800">本公司獲全國廣告比賽優勝</b></a>
+                  <p>榮獲2013年全國廣告工程設計比賽優勝獎</p>
+                </dd>
+              </dl>
+              <a href="n2.html" title="" class="more"></a> </li><li>
+              <dl>
+                <dt>
+                  <div class="date"> <span style="color:#ee7800">07-20</span> <em>2011</em> </div>
+                </dt>
+                <dd> <a href="n1.html" title=""><b style="color:#ee7800">本公司獲廣告招牌比賽決賽入圍</b></a>
+                  <p>2011年中華民國廣告招牌應用設計決賽入圍</p>
+                </dd>
+              </dl>
+              <a href="n1.html" title="" class="more"></a> </li>
+          </ul>
+          <div class="clearfix"> </div>
+        </div>
+        <!-- <div class="pages">
+          <ul>
+            <li><span class="pageinfo">共 <strong>1</strong>页<strong>6</strong>条记录</span></li>
+          </ul>
+        </div> -->
+      </div>
     </div>
   </div>
 </div>
 
-<div class="list01">
-  <div class="mainall">
-    <iframe width="100%" height="2500" src="https://www.surveycake.com/s/g1NKZ" style="overflow:hidden; border:#ee7800 1px solid;" allowTransparency="true" frameborder="0"></iframe>
-  </div>
-</div>
-
-
-<!-- <div class="container">
+<div class="container">
  <div class="image-list">
    <div class="wjdh-h3">
       <h3> <a href="case.html" title="" style="color:#ee7800">工程實績</a> </h3>
       <span style="color:#ee7800"><i style="background-color:#ee7800"></i>Case<em style="background-color:#ee7800"></em></span> </div>
     <div class="content bd">
       <ul>
-      <li><a href="c1.html" title="" class="title-a" style="color:#ee7800">Gogi Gogi 一起肉肉吧</a>
-          <div class="img"><a href="c1.html" title=""><img src="./images/abc1.jpg" data-thumb="0" data-src="" title="" alt="" />
+      <li><a href="c5.html" title="" class="title-a" style="color:#ee7800">京典臻品</a>
+          <div class="img" style="height:190px"><a href="c5.html" title=""><img src="./images/work/c5m.jpg" data-thumb="0" data-src="" title="" alt="" />
             <div class="item-mask">
               <div class="item-link-icon"> <i class="wjdh-link"></i> </div>
             </div>
             </a> </div>
-          <p>一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食豐富的韓式組合、烤肉、料理深獲在地好評</p>
-          <a href="c1.html" title="了解详情" class="more"><span style="">了解详情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
+          <p>京典臻品在西屯區福雅路，是天然水晶礦石專賣店</p>
+          <a href="c1.html" title="" class="more"><span style="">了解詳情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
 
-      <li style="margin-left:70px;"><a href="c2.html" title="" class="title-a" style="color:#ee7800">一拳咖啡</a>
-          <div class="img"> <a href="c2.html" title=""> <img src="./images/abc2.jpg" data-thumb="0" data-src="" title="" alt="" />
+      <li style="margin-left:70px;"><a href="c6.html" title="" class="title-a" style="color:#ee7800">天承軒手工饅頭</a>
+          <div class="img" style="height:190px"> <a href="c6.html" title=""> <img src="./images/work/c6m.jpg" data-thumb="0" data-src="" title="" alt="" />
             <div class="item-mask">
               <div class="item-link-icon"> <i class="wjdh-link"></i> </div>
             </div>
             </a> </div>
-          <p>一拳咖啡位於北區梅庭街，為舒芙蕾及鬆餅專賣店，口感綿密鬆軟，入口即化</p>
-          <a href="c2.html" title="了解详情" class="more"><span>了解详情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
+          <p>天承軒位於西區華美街，為手工饅頭專賣店</p>
+          <a href="c2.html" title="" class="more"><span>了解詳情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
 
-      <li style="margin-left:70px;"><a href="c3.html" title="" class="title-a" style="color:#ee7800">三喜蛋餅</a>
-          <div class="img"> <a href="c3.html" title=""> <img src="./images/abc3.jpg" data-thumb="0" data-src="" title="" alt="" />
+      <li style="margin-left:70px;"><a href="c7.html" title="" class="title-a" style="color:#ee7800">天蜜日式養生甜品</a>
+          <div class="img" style="height:190px"> <a href="c7.html" title=""> <img src="./images/work/c7m.jpg" data-thumb="0" data-src="" title="" alt="" />
             <div class="item-mask">
               <div class="item-link-icon"> <i class="wjdh-link"></i> </div>
             </div>
             </a> </div>
-          <p>三喜蛋餅位於北區太平路，是在地眾所皆知的古早味蛋餅專賣店</p>
-          <a href="c3.html" title="了解详情" class="more"><span>了解详情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
+          <p>天蜜位於大里區鐵路街，為甜品專賣店</p>
+          <a href="c7.html" title="" class="more"><span>了解詳情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
 
-      <li style="margin-left:70px;"><a href="c4.html" title="" class="title-a" style="color:#ee7800">大魔</a>
-          <div class="img"> <a href="c4.html" title=""> <img src="./images/abc4.jpg" data-thumb="0" data-src="" title="" alt="" />
+      <li style="margin-left:70px;"><a href="c8.html" title="" class="title-a" style="color:#ee7800">天賦股份有限公司</a>
+          <div class="img" style="height:190px"> <a href="c8.html" title=""> <img src="./images/work/c8m.jpg" data-thumb="0" data-src="" title="" alt="" />
             <div class="item-mask">
               <div class="item-link-icon"> <i class="wjdh-link"></i> </div>
             </div>
             </a> </div>
-          <p>大魔位於西屯區，為主打高級食材的鍋物料理店</p>
-          <a href="c4.html" title="了解详情" class="more"><span>了解详情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
+          <p>天賦位於西屯區福雅路，為自動化倉儲設備公司</p>
+          <a href="c8.html" title="" class="more"><span>了解詳情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
       </ul>
     </div>
     <div class="clearfix"> </div>
     <div class="tagcell hd"> </div>
   </div>
-</div> -->
+</div>
 
 <div class="wjdh-float">
   <ul>
@@ -155,7 +244,7 @@
 </div>
 
 <br>
-<div style="margin-top: 0px">
+<div style="margin-top: 10px">
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7280.747144554078!2d120.62006700000002!3d24.158628!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x600d7db55906b05c!2z5b-r5b6X5Yqb5buj5ZGK5pyJ6ZmQ5YWs5Y-4!5e0!3m2!1szh-TW!2stw!4v1574138373489!5m2!1szh-TW!2stw" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 </div>
 
