--- a/c26.html
+++ b/c26.html
@@ -350,7 +350,7 @@
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">一拳咖啡位於大雅區雅潭路三段<br>為地方上的特色生態農莊</p>
+              <p class="product-desc mtb_30">赤腳ㄚ生態農莊位於大雅區雅潭路三段<br>為地方上的特色生態農莊</p>
 
               <a class="btn" href="./order.html" title="" style="float:right">立即諮詢</a> 
             </div>
