--- a/c35.html
+++ b/c35.html
@@ -337,7 +337,7 @@
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 公家機關</span></li>
+                  <span> 室外活動</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
                   <span>木座+不銹鋼立體字、立第植栽不銹鋼立體字</span>
