--- a/about.html
+++ b/about.html
@@ -69,30 +69,57 @@
   <div class="container">
     <div class="page-about content-show">
       <div class="page-content">
-      <h2 style="color:#ee7800; text-align:center">快得力沿革</h2>
-        <p style="margin-top:10px">快得力廣告創於1998年，致力於廣告市場餘20多年經驗，擁有上百件企業連鎖招牌實績，經歷豐富的製作經驗、製工精良，獲得企業口碑的推薦。
-        是值得信賴商業招牌最優質顧問。為公家機關和企業客户等提供全面且專業的综合解决方案與全程卓越的客户體驗。
-        我們以客户需求和發展理念為動力，使公司始終處於行業领先地位，將富有特色的方案與專業的技術结合，持續增進解决專案之綜合能力。
-        統籌諮詢、設計、技術、管理互相協作的高效率服務模式，因地制宜為不同方案及專案項目提供具有創新性與經濟的解决方案。</p>
-        <br>
-	    <h2 style="color:#ee7800; text-align:center; margin-top:20px">企業理念</h2>
-        <br>
-	      <p style="margin-top:10px">堅持品質(Quality)、專業技術(Professional Technology)、快速交案(Quickly)、高性價比(Cost-Performance ratio)，擁有業界最薄燈箱規格。
-        首創磁吸式易替換廣告文宣、造型款訂製，透明工期提供連鎖品牌最優質的選擇。
-	      長期耕耘廣告業界二十餘年，榮獲多項設計比賽獎項，是集研發、設計、生產、保固、諮詢服務等一体的綜合型企業，為您提供品質卓越、專業誠信的服務，廣受在地客戶信賴。</p>
-      <h2 style="color:#ee7800; text-align:center; margin-top:20px">服務特色</h2>
-	      <p style="margin-top:10px">連鎖企業品牌合作，包含商業品牌、連鎖店面、食/飲品、商展空間、建築、餐廳、汽車、酒商、醫療用品…等商家，立基十餘年獲得多業界多品牌的肯定。
-		    快得力長期致力於廣告及設計領域，從店面的初期規劃到後續操作執行，為您提供從初期規劃、概念設計、系統製作、安裝檢測、保固維護等完整且專業化的服務。
-        具體包括專案的每一個步驟，鉅細靡遺，交給快得力，讓您得意又放心。</p>
+        <img src="./images/work/about.jpg" style="width:500px; display:block; margin:auto;">
+        <h2 style="color:#ee7800; text-align:center">使命</h2>
+          <p style="margin-top:10px; text-align:center;">讓生活因視覺標誌美學而更美好</p>
+          <br>
+	      <h2 style="color:#ee7800; text-align:center; margin-top:20px">願景</h2>
+          <br>
+	        <p style="margin-top:10px; text-align:center;">成為台灣視覺標誌的領導品牌</p>
+        <h2 style="color:#ee7800; text-align:center; margin-top:20px">經營理念</h2>
+	        <p style="margin-top:10px; text-align:center;">V=I<sup>2</sup> + E<sup>2</sup></p>
+          <p style="margin-top:10px; text-align:center;">價值 Value – 提供客戶高價值產品，經由我們的服務，提升客戶的品牌效益。</p>
+          <p style="margin-top:10px; text-align:center;">誠信 Integrity  –  不說假話，不輕易承諾，對答應的事情全力以赴。</p>
+          <p style="margin-top:10px; text-align:center;">創新 Innovation  – 永遠找出更好的方法，完成我們的專案。</p>
+          <p style="margin-top:10px; text-align:center;">熱忱 Enthusiasm  – 對任何人、事、物，以積極正向的態度面對。</p>
+          <p style="margin-top:10px; text-align:center;">效率 Efficiency  – 精進生產流程即時產出，並提供給客戶專業的服務。</p>
       </div>
     </div>
   </div>
 </div>
-<div class="container">
+
+<div class="mainall">
+  <div class="case_t tc mt40">
+    <h3><a href="#" title="TOP 5" style="color: #F39800">我們的團隊
+      <p>觀迎加入快得力大家庭</p>
+      </a></h3>
+  </div>
+  <div class="case_n">
+    <ul>
+      <li class="case1" style="height: 448px"><a href="./c11.html" title="" class="pros_img"><img src="images/10.jpg" alt="" /></a>
+        <p style="background: #F39800"><a href="./c11.html" title="">快得力全景</a> </p>
+      </li>
+      <li class="case2" style="margin-left: -10px"> <a href="./c15.html" title="" class="pros_img"><img src="images/17.jpg" alt="" /></a>
+        <p style="background: #F39800;"><a href="./c15.html" title="">會議實錄</a> </p>
+      </li>
+      <li class="case3" style="margin-left: -10px"> <a href="./c1.html" title="" class="pros_img"><img src="images/16.jpg" alt="" /></a>
+        <p style="background: #F39800"><a href="./c1.html" title="">產品製作</a> </p>
+      </li>
+      <li class="case4" style="margin-left: -10px; margin-top: 15px"> <a href="./c6.html" title="" class="pros_img"><img src="images/ban03.jpg" alt="" /></a>
+        <p style="background: #F39800"><a href="./c6.html" title="">施工情況</a> </p>
+      </li>
+      <li class="case5" style="margin-left: -10px; margin-top: 15px"> <a href="./c12.html" title="" class="pros_img"><img src="style/images/td02.jpg" alt="" /></a>
+        <p style="background: #F39800"><a href="./c12.html" title="">作品近照</a> </p>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!-- <div class="container">
  <div class="image-list">
    <div class="wjdh-h3">
-      <h3> <a href="case.html" title="" style="color:#ee7800">工程實績</a> </h3>
-      <span style="color:#ee7800"><i style="background-color:#ee7800"></i>Case<em style="background-color:#ee7800"></em></span> </div>
+      <h3> <a href="case.html" title="" style="color:#ee7800">我們的團隊</a> </h3>
+      <span style="color:#ee7800"><i style="background-color:#ee7800"></i>Team<em style="background-color:#ee7800"></em></span> </div>
     <div class="content bd">
       <ul>
       <li><a href="c1.html" title="" class="title-a" style="color:#ee7800">Gogi Gogi 一起肉肉吧</a>
@@ -135,7 +162,7 @@
     <div class="clearfix"> </div>
     <div class="tagcell hd"> </div>
   </div>
-</div>
+</div> -->
 
 <div class="wjdh-float">
   <ul>
