--- a/n1.html
+++ b/n1.html
@@ -30,8 +30,8 @@
 
 
 <!-- <link rel="alternate" media="only screen and(max-width: 640px)"href="../m/liste9f9.html?tid=17" > -->
-<meta http-equiv="mobile-agent" content="format=xhtml;url=/m/list.php?tid=17">
-<script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="./news_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script>
+<!-- <meta http-equiv="mobile-agent" content="format=xhtml;url=/m/list.php?tid=17"> -->
+<!-- <script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="./news_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script> -->
 </head>
 <body>
 <div class="top_bgk"> 
