--- a/p1_2.html
+++ b/p1_2.html
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="style/js/js.js"></script>
 
 <meta http-equiv="mobile-agent" content="format=xhtml;url=/m/index.html">
-<script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="./product_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script>
+<!-- <script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="./product_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script> -->
 </head>
 <body>
 <!-- <div class="top_bg">
@@ -156,8 +156,8 @@
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="c33.html" title="" target="_blank"> <img src="images/work/c33m2.jpg" alt=""/> </a> </div>
-          <div class="info"> <a href="c33.html" title=""  target="_blank">無接縫直招+帆布廣告橫招/彩茲</a> </div>
+          <div class="pic"> <a href="c20.html" title="" target="_blank"> <img src="images/work/c20m2.jpg" alt=""/> </a> </div>
+          <div class="info"> <a href="c20.html" title=""  target="_blank">圓形無接縫招牌/MINI HOTELS</a> </div>
           <em></em>
         </li>
         <li>
@@ -165,8 +165,8 @@
           <div class="info"> <a href="c30.html" title="" target="_blank">中空板招牌/拉拉手</a> </div>
         </li>
         <li>
-          <div class="pic"> <a href="c6.html" title="" target="_blank"> <img src="images/work/c6m2.jpg" alt=""/> </a> </div>
-          <div class="info"> <a href="c6.html" title="" target="_blank">木頭雕刻招牌/天承軒</a> </div>
+          <div class="pic"> <a href="c21.html" title="" target="_blank"> <img src="images/work/c21m3.jpg" alt=""/> </a> </div>
+          <div class="info"> <a href="c21.html" title="" target="_blank">LED沖孔發光字/USD遊戲主題餐廳</a> </div>
           <em></em>
         </li>
         <li>
@@ -175,8 +175,8 @@
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="c14.html" title="" target="_blank"> <img src="images/work/c14m.jpg" alt=""/> </a> </div>
-          <div class="info"> <a href="c14.html" title="" target="_blank">不銹鋼折板發光招牌/好堅果</a> </div>
+          <div class="pic"> <a href="c28.html" title="" target="_blank"> <img src="images/work/c28m2.jpg" alt=""/> </a> </div>
+          <div class="info"> <a href="c28.html" title="" target="_blank">折板壓克力發光招牌/坪林五二家品</a> </div>
         </li>
       </ul>
     </div>
