--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <script type="text/javascript" src="style/js/js.js"></script>
 <!-- <link rel="alternate" media="only screen and(max-width: 640px)"href="../m/liste9f9.html?tid=17" > -->
 <meta http-equiv="mobile-agent" content="format=xhtml;url=/m/list.php?tid=17">
-<script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="./about_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script>
+<!-- <script type="text/javascript">if(window.location.toString().indexOf('pref=padindex') != -1){}else{if(/AppleWebKit.*Mobile/i.test(navigator.userAgent) || (/MIDP|SymbianOS|NOKIA|SAMSUNG|LG|NEC|TCL|Alcatel|BIRD|DBTEL|Dopod|PHILIPS|HAIER|LENOVO|MOT-|Nokia|SonyEricsson|SIE-|Amoi|ZTE/.test(navigator.userAgent))){if(window.location.href.indexOf("?mobile")<0){try{if(/Android|Windows Phone|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)){window.location.href="./about_m.html";}else if(/iPad/i.test(navigator.userAgent)){}else{}}catch(e){}}}}</script> -->
 </head>
 <body>
 <div class="top_bgk"> 
@@ -69,20 +69,117 @@
   <div class="container">
     <div class="page-about content-show">
       <div class="page-content">
-        <img src="./images/work/about.jpg" style="width:500px; display:block; margin:auto;">
-        <h2 style="color:#ee7800; text-align:center">使命</h2>
-          <p style="margin-top:10px; text-align:center;">讓生活因視覺標誌美學而更美好</p>
-          <br>
-	      <h2 style="color:#ee7800; text-align:center; margin-top:20px">願景</h2>
-          <br>
-	        <p style="margin-top:10px; text-align:center;">成為台灣視覺標誌的領導品牌</p>
+        <h2 style="color:#ee7800; text-align:center">關於我們</h2>
+        <p style="margin-top:10px; text-align:center;">快得力創立於1998年<br>我們的使命是讓生活因視覺標誌美學而更美好<br>我們的願景是要成為台灣視覺標誌的領導品牌</p>
+        <br>
+        
+<div class="mainall" style=" margin-left:350px;">
+  <div class="news_left fl wow bounceInLeft">
+    <div class="news_nav"></div>
+    <div class="clearboth"></div>
+    <div class="case_t tc"></div>
+    <div class="honor_n" style="margin-top:-80px;">
+      <div class="bd">
+        <ul>
+          <li>
+            <div class="pic"> <a href="#" title="TRIZ手作咖啡"><img src="images/p1r.jpg" alt="TRIZ手作咖啡" /></a> </div>
+            <div class="info"> <a href="#" title="TRIZ手作咖啡">TRIZ手作咖啡</a> </div>
+          </li>
+          <li>
+            <div class="pic"> <a href="#" title="意利咖啡"><img src="images/p2r.jpg" alt="意利咖啡" /></a> </div>
+            <div class="info"> <a href="#" title="意利咖啡">意利咖啡</a> </div>
+          </li>
+          <li>
+            <div class="pic"> <a href="#" title="可口可樂"><img src="images/p3r.jpg" alt="可口可樂" /></a> </div>
+            <div class="info"> <a href="#" title="可口可樂">可口可樂</a> </div>
+          </li>
+          <li>
+            <div class="pic"> <a href="#" title="ORO胎壓偵測器"><img src="images/p4r.png" alt="ORO胎壓偵測器" /></a> </div>
+            <div class="info"> <a href="#" title="ORO胎壓偵測器">ORO胎壓偵測器</a> </div>
+          </li>
+          <!-- <li>
+            <div class="pic"> <a href="#" title="意利咖啡"><img src="images/p2r.jpg" alt="意利咖啡" /></a> </div>
+            <div class="info"> <a href="#" title="意利咖啡">意利咖啡</a> </div>
+          </li> -->
+        </ul>
+      </div>
+    </div>
+    <script type="text/javascript">
+    jQuery(".honor_n").slide({titCell:".hd ul",mainCell:".bd ul",autoPage:true,effect:"leftLoop",autoPlay:true,vis:3});
+   </script> 
+  </div>  
+</div>
+
+        <h2 style="color:#ee7800; margin-top:-50px; text-align:center">快得力里程碑</h2>
+        <!-- <img src="./images/work/about.jpg" style="width:500px; display:block; margin:auto; margin-top:10px;"> -->
+        <table border="0" style="margin:auto;">
+　        <tr>
+　          <td style="border-right:2px #ee7800 dashed;">1998</td>
+　          <td style="text-align:center">成立得力廣告社</td>
+　        </tr>
+　        <tr>
+　          <td style="border-right:2px #ee7800 dashed;">2006</td>
+　          <td style="text-align:center">開始營建標識指示牌之設計製作</td>
+　        </tr>
+          <tr>
+　          <td style="border-right:2px #ee7800 dashed;">2007</td>
+　          <td style="text-align:center">開發布條懸掛器，獲得兩項專利並榮獲發明銅牌獎</td>
+　        </tr>
+　        <tr>
+　          <td style="border-right:2px #ee7800 dashed;">2008</td>
+　          <td style="text-align:center">成立亞特文創科技有限公司</td>
+　        </tr>
+          <tr>
+　          <td style="border-right:2px #ee7800 dashed;">2010</td>
+　          <td style="text-align:center">亞特科技成立機械加工部，購置鐳射切割機、CNC雕刻機</td>
+　        </tr>
+          <tr>
+　          <td style="border-right:2px #ee7800 dashed;">2012</td>
+　          <td style="text-align:center">得力廣告社改制為快得力廣告有限公司</td>
+　        </tr>
+          <tr>
+　          <td style="border-right:2px #ee7800 dashed;">2013</td>
+　          <td style="text-align:center">榮獲第二屆全國廣告工程設計比賽第五名(中區第一名)</td>
+　        </tr>
+          <tr>
+　          <td style="border-right:2px #ee7800 dashed;">2016</td>
+　          <td style="text-align:center">榮獲台中市政府優良企業表揚</td>
+　        </tr>
+          <tr>
+　          <td style="border-right:2px #ee7800 dashed;">2018</td>
+　          <td style="text-align:center">購置自有廠房約300坪，遷入現址</td>
+　        </tr>
+        </table>
+        <br>
         <h2 style="color:#ee7800; text-align:center; margin-top:20px">經營理念</h2>
 	        <p style="margin-top:10px; text-align:center;">V=I<sup>2</sup> + E<sup>2</sup></p>
-          <p style="margin-top:10px; text-align:center;">價值 Value – 提供客戶高價值產品，經由我們的服務，提升客戶的品牌效益。</p>
-          <p style="margin-top:10px; text-align:center;">誠信 Integrity  –  不說假話，不輕易承諾，對答應的事情全力以赴。</p>
-          <p style="margin-top:10px; text-align:center;">創新 Innovation  – 永遠找出更好的方法，完成我們的專案。</p>
-          <p style="margin-top:10px; text-align:center;">熱忱 Enthusiasm  – 對任何人、事、物，以積極正向的態度面對。</p>
-          <p style="margin-top:10px; text-align:center;">效率 Efficiency  – 精進生產流程即時產出，並提供給客戶專業的服務。</p>
+          <!-- <p style="margin-top:10px; text-align:center;">價值 Value – 提供客戶高價值產品，經由我們的服務，提升客戶的品牌效益。</p> -->
+          <!-- <p style="margin-top:10px; text-align:center;">誠信 Integrity  –  不說假話，不輕易承諾，對答應的事情全力以赴。</p> -->
+          <!-- <p style="margin-top:10px; text-align:center;">創新 Innovation  – 永遠找出更好的方法，完成我們的專案。</p> -->
+          <!-- <p style="margin-top:10px; text-align:center;">熱忱 Enthusiasm  – 對任何人、事、物，以積極正向的態度面對。</p> -->
+          <!-- <p style="margin-top:10px; text-align:center;">效率 Efficiency  – 精進生產流程即時產出，並提供給客戶專業的服務。</p> -->
+        <table border="0" style="margin:auto; margin-top:-20px;">
+　        <tr>
+　          <td style="border-right:2px #ee7800 dashed;">價值 Value</td>
+　          <td style="text-align:center">提供高價值產品，經由我們的服務，提升品牌效益</td>
+　        </tr>
+　        <tr>
+　          <td style="border-right:2px #ee7800 dashed;">誠信 Integrity</td>
+　          <td style="text-align:center">不說假話，不輕易承諾，對答應的事情全力以赴</td>
+　        </tr>
+          <tr>
+　          <td style="border-right:2px #ee7800 dashed;">創新 Innovation</td>
+　          <td style="text-align:center">永遠找出更好的方法，完成我們的專案</td>
+　        </tr>
+　        <tr>
+　          <td style="border-right:2px #ee7800 dashed;">熱忱 Enthusiasm</td>
+　          <td style="text-align:center">對任何人、事、物，以積極正向的態度面對</td>
+　        </tr>
+          <tr>
+　          <td style="border-right:2px #ee7800 dashed;">效率 Efficiency</td>
+　          <td style="text-align:center">精進生產流程即時產出，並提供給客戶專業的服務</td>
+　        </tr>
+        </table>
       </div>
     </div>
   </div>
