--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <a href="index.html" title="快得力廣告"><img style="max-width: 85%; margin-left: 0px" src="images/logo1105_2.png" alt="快得力廣告" border="0"></a>
       <!-- <p>www.qdesign.com.tw</p> -->
     </div>
-    <div class="biaoyu">全台最得力品牌推手「快得力」招牌最夠力<br>Quickly, Fast, Do The Best！</div>
+    <div class="biaoyu">廣告招牌專業訂製<br>標誌美學領導品牌</div>
     <!-- <div class="iphone fr">
       <p> 諮詢熱線： <span>04-23829500</span>
       </p>
@@ -380,7 +380,7 @@
     </div>
     <div class="td_right">
       <div class="td_n none" id="td1">
-        <div class="td_pic"> <img src="style/images/td01.jpg" title="" alt="" /> </div>
+        <div class="td_pic"> <!-- <img src="style/images/td01.jpg" title="" alt="" /> --> <iframe width="710" height="455" src="https://www.youtube.com/embed/Sl5tsrw2ZKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         <div class="td_zi">立體字/廣告招牌/燈箱/CNC雕刻/雷射切割，首創業界最薄燈箱，給客戶最完整產品</div>
       </div>
       <div class="td_n none" id="td2">
